--- a/package.json
+++ b/package.json
@@ -23,11 +23,18 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.1.9",
+    "@langchain/community": "^0.3.32",
+    "@langchain/core": "^0.3.40",
+    "@langchain/langgraph": "^0.2.47",
+    "@langchain/openai": "^0.4.4",
+    "@langchain/textsplitters": "^0.1.0",
     "@mendable/firecrawl-js": "^1.16.0",
     "ai": "^4.1.17",
     "dotenv": "^16.4.7",
     "js-tiktoken": "^1.0.17",
+    "langchain": "^0.3.19",
     "lodash-es": "^4.17.21",
+    "marked": "^15.0.7",
     "p-limit": "^6.2.0",
     "zod": "^3.24.1"
   },
