--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ node_modules
 .env.test.local
 .env.production.local
 
+# Python
+.venv/
+.venv
 # Testing
 coverage
 
@@ -50,3 +53,8 @@ perplexity-output.md
 downloads/
 
 rag-agent-deep.md
+
+combined_output.md
+
+venv/
+.venv/
